CS59_Intellij/tests/invalid/semantics/dividebyzero.dsl
/* dividing by zero */
i = 1 / 0.